fix issues with list view on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,7 @@ hr {
 
 @media screen and (max-width: 958px) {
     #list {
-        width: 25%;
+        width: 26%;
     }
 }
 
